--- a/index.html
+++ b/index.html
@@ -1,1 +1,321 @@
-Coming Soon!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <meta name="description" content="In-home personal training for women in Colorado Springs.">
+    <meta name="author" content="Kristen Nielsen">
+	<meta name="robots" content="index, follow">
+	<!--title-->
+    <title>Together Won</title>
+	
+	<!--CSS-->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/animation.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">	
+	
+	<!--Google Fonts-->
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800,100,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
+	
+    <!--[if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+    <![endif]-->       
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+</head><!--/head-->
+<body>
+	<header id="navigation">
+        <div class="navbar navbar-fixed-top main-nav" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">
+                    	<img class="img-responsive" src="images/logo.png" alt="logo">
+                    </a>                    
+                </div>	
+                <nav id="main-menu" class="collapse navbar-collapse navbar-right">					
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#slider-section">Home</a></li> 
+						<li><a href="#about">About</a></li>
+						<li><a href="#options">Options</a></li>
+						<li><a href="#pricing-section">Prices</a></li>
+                        <li><a href="#trainer">Trainer</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#contact-us">Contact</a></li>   					
+                    </ul>					
+                </nav>
+            </div>
+        </div>
+    </header><!--/#navigation--> 
+	
+	<div id="slider-section">
+		<div class="container">
+				<div class="slider-content">
+					<div class="row">
+						<div class="col-md-8">
+							<h1>Personal Training <br>For<span> Real</span> Women</h1>
+							<p>In-home personal training centered around protecting and restoring the pelvic floor, so you can be free to achieve your fitness and weight loss goals, and live life to the fullest!</p>
+							<a href="#about" class="btn btn-primary">Learn More</a>
+
+						</div>
+					</div>
+				</div>
+		</div>
+	</div><!--/#slider section-->
+	
+
+	<div id="about" class="parallax-section">
+		<div class="overlay-bg"></div>
+		<div class="container">
+			<div class="padding">
+
+				<h1 class="text-center">Pelvic Floor?</h1>
+				<p>Do you leak when you run, jump or sneeze?  Do you need to go at the worst times?  Do you let your pelvic floor keep you from achieving your fitness or weight loss goals, or do you manage to hide your difficulty while wishing you wouldn't have to?</p>
+				<br>
+				<p>Pelvic floor dysfunction imcompasses a range of symptoms including mild incontinence to more serious conditions such as severe pelvic pain and even pelvic organ prolapse.  <b>Many women believe pelvic floor dysfuntion is simply a reality of life that can not be avoided or improved.</b> Because of this, they neglet to strengthen these muscles.  Unfortunately, weak pelvic floor muscles usually progress to more serious conditions as women age.  In reality,<b> pelvic floor dysfunction is not something you have to live with!</b> The pelvic floor is part of the body's core; the center of strength, movement and balance.  Therefore, <b>training the body properly starts with training the core.</b>  You don't need to live with dysfuntion any longer!  Together we can win!</p>
+			</div>
+		</div>
+	</div><!--/#about-->
+
+
+
+
+	<div id="options" class="parallax-section">
+		<div class="container">
+			<div class="visa-tab row">
+				<div class="col-sm-3 col-md-2">
+					<ul class="tab-list text-center" role="tablist">
+						<li class="active"><a href="#visa" role="tab" data-toggle="tab"><i class="fa fa-user"></i>Private Training</a></li>
+						<li><a href="#terms" role="tab" data-toggle="tab"><i class="fa fa-user-plus"></i>Buddy Training</a></li>
+						<li><a href="#policy" role="tab" data-toggle="tab"><i class="fa fa-users"></i>Classes</a></li>
+					</ul>
+				</div>
+				<div class="col-sm-9 col-md-10">
+					<div class="tab-content">
+						<div class="tab-pane active" id="visa">
+							<div class="visa-info">
+								<h1>Private Training</h1>
+
+								<p>What to expect:
+									<li>1 Hour, one-on-one sessions designed entirely around your needs and goals</li>
+									<li>A female certified trainer that understands you and knows what to do to help</li>
+									<li>Individualized workouts based on assessments that identify muscle imbalances</li>
+									<li>Crowd-free training in your home or in the trainer's home gym</li>
+									<li>Assessments and feedback to help you gauge your progress</li>
+									<li>Weekly workout plans for the days you are not with the trainer</li>
+
+								</p>
+
+							</div>
+						</div>
+						<div class="tab-pane" id="terms">
+							<div class="visa-info">
+								<h1>Buddy Training</h1>
+								<p>What to expect:
+								<li>1 Hour sessions with a friend that has similar training goals</li>
+								<li>A female certified trainer that understands how to help you reach your goals</li>
+								<li>Partner-centered personalized workouts that are challengine and fun</li>
+								<li>Crowd-free training in your home or in the trainer's home gym</li>
+								<li>Assessments and feedback to help you gauge your progress</li>
+								</p>
+
+							</div>
+						</div>
+						<div class="tab-pane" id="policy">
+							<div class="visa-info">
+								<h1>Classes</h1>
+								<p>TogetherWON is currently working on developing specialized small classes that are centered around stages in a women's life (i.e. pre-natal, post-natal, peri-menopause, post-menopause). In these classes you will learn about the physical implications of your stage as you participate in workouts designed to strengthen your pelvic floor and overall fitness.  Please contact TogetherWON for more information on the classes as they develop.</p>
+								</p>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div><!--/#visa details-->
+
+
+
+
+    <div id="pricing-section" class="parallax-section">
+        <div class="container">
+            <div class="padding">
+                <div class="row section-title">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <h1 class="text-center"><strong>Pricing</strong></h1>
+                        <p>Please contact TogetherWON for availability and scheduling, as well as to request a FREE CONSULTATION. Currently In-Home training is only available for residents in North Colorado Springs and Monument.</p>
+                    </div>
+                </div>
+                <div class="plans">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+                            <div class="plan">
+                                <h1>6 Sessions Private Training</h1>
+                                <h2>$360</h2>
+                                <p>6 weeks of 1 day/week training & individualized weekly fitness plans</p>
+
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+                            <div class="plan">
+                                <h1>12 Sessions Private Training</h1>
+                                <h2>$660</h2>
+                                <p>6 weeks of 2 days/week training & individualized weekly fitness plans </p>
+
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+                            <div class="plan">
+                                <h1>18 Sessions Private Training</h1>
+                                <h2>$900</h2>
+                                <p>6 weeks of 3 days/week training & individualized weekly fitness plans</p>
+
+                            </div>
+                        </div>
+                    </div>
+					<div class="row">
+						<div class="col-md-4 col-sm-12 col-xs-12">
+							<div class="plan">
+								<h1>6 Sessions Buddy Training</h1>
+								<h2>$180/person</h2>
+								<p>6 weeks of 1 day/week training with a friend</p>
+
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-12 col-xs-12">
+							<div class="plan">
+								<h1>12 Sessions Buddy Training</h1>
+								<h2>$324/person</h2>
+								<p>6 weeks of 2 days/week training with a friend </p>
+
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-12 col-xs-12">
+							<div class="plan">
+								<h1>18 Sessions Buddy Training</h1>
+								<h2>$450/person</h2>
+								<p>6 weeks of 3 days/week training with a friend</p>
+
+							</div>
+						</div>
+					</div>
+                </div>
+            </div>
+        </div>
+    </div><!--/#pricing-section-->
+
+	<div id="testimonials">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2 text-center">
+					<div id="comments-carousel" class="carousel carousel-fade slide padding" data-ride="carousel" data-interval="8000">
+						<h1>Client Testimonials</h1>
+						<h4 class="nonmobile">(Hover to Pause)</h4>
+						<div class="carousel-inner">
+							<div class="item active">
+								<img class="img-responsive img-circle" src="images/julie.jpg" alt="Julie Versaw" />
+								<p class="text-left"> I’m so excited about my progress. After three months, I have strength to do things that I never imagined that I could do. Kristen is always prompt and is always prepared with a workout plan based on my progress and needs and has all the equipment we need ready and waiting.</p>
+								<p class="word-author"><span>Julie Versaw</span> </p>
+							</div>
+							<div class="item">
+								<img class="img-responsive img-circle" src="images/logo.png" alt="" />
+								<p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+								<p class="word-author"><span>Superwoman</span></p>
+							</div>
+							<div class="item">
+								<img class="img-responsive img-circle" src="images/logo.png" alt="" />
+								<p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+								<p class="word-author"><span>Jane Doe</span></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div><!--/#testimonials-->
+
+
+
+	<div id="trainer">
+		<div class="trainer part-three">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="product-image">
+							<img class="img-responsive img-rounded" src="images/trainer.jpg" alt="Kristen Nielsen" />
+						</div>
+						<div class="product-info">
+							<h1>Kristen Nielsen</h1>
+							<h2>ACE Certified Personal Trainer <br> Pelvic Floor Specialist</h2>
+							<p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains since she was 4. She also developed a passion for running and swimming, both of which she competed Div I in college.  After college Kristen had the privelege of becoming a mother to 4 amazing children.  It was during this time that she learned the limitations of pelvic floor dysfunction and how it can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that she could remain active, Kristen sought out advice on the subject but found it difficult to receive practical help. After becoming an ACE certified personal trainer, Kristen specialized in core and pelvic floor flunction in hopes to bring others the answers to pelvic floor damage prevention and restoration. She hopes that others can ultimately experience the same freedom she has re-gained.  These days you may spot Kristen sprinting down the street or leaping in the air as she plays with her children.  She is excited to help others find freedom as well!    </p>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div><!--/#trainer-->
+
+
+
+
+
+
+
+	<footer id="contact-us">
+		<div class="container">
+			<div class="contact-form text-center">
+				<p class="row section-title">
+						<h1>Send A Message</h1>
+						<p>Submit the following form for all inquiries or to schedule a FREE consultation. <br>You may also contact TogetherWON at yyy-yyy-yyyy</p>
+					</div>
+				</div>
+				<form id="contact-form" name="contact-form" method="post" action="#">
+					<div class="row">
+						<div class="form-group col-sm-4">
+							<input type="text" name="name" class="form-control" required="required" placeholder="Your Name">							
+						</div>
+						<div class="form-group col-sm-4">
+							<input type="email" name="email" class="form-control" required="required" placeholder="Your Email">
+						</div>
+						<div class="form-group col-sm-4">
+							<input type="text" name="subject" class="form-control" placeholder="Subject">
+						</div>						
+						<div class="form-group col-sm-12">
+							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
+						</div> 
+					</div>				                                   
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</div>
+				</form>	
+			</div>
+		</div><!--/#contact-form--> 
+		<div id="footer-bottom">
+			<div class="container text-center">
+				<p>© Copyright 2016 <a href="#">TogetherWon</a>. All Rights Reserved.</p>
+			</div>			
+		</div>
+	</footer>
+	
+	<!--/#scripts--> 
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.parallax.js"></script>
+	<script type="text/javascript" src="js/jquery.nav.js"></script>
+    <script type="text/javascript" src="js/main.js"></script> 
+</body>
+</html>
