--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="slider-content">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Personal Training <br>For<span> Real</span> Women</h1>
+                    <h1>Real Training <br>For<span> Real</span> Women</h1>
                     <p>In-home personal training centered around protecting and restoring the pelvic floor, so you can
                         be free to achieve your fitness and weight loss goals, and live life to the fullest!</p>
                     <a href="#about" class="btn btn-primary">Learn More</a>
