--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Real Training <br>Real <span>Women</span></h1>
-                    <p>In-home personal training centered around protecting and restoring the pelvic floor, so you can
-                        be free to achieve your fitness and weight loss goals, and live life to the fullest!</p>
+                    <p>In-home personal training centered around protecting and restoring the pelvic floor, so you are
+                       free to achieve your fitness and weight loss goals, and live life to the fullest!</p>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
