--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="product-info">
                         <h1>Kristen Nielsen</h1>
                         <h2>ACE Certified Personal Trainer <br> Pelvic Floor Specialist</h2>
-                        <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains since she was 4. She
+                        <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
                             also developed a passion for running and swimming, both of which she competed Div I in
                             college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
                             It was during this time that she learned the limitations of pelvic floor dysfunction and how
