--- a/index.html
+++ b/index.html
@@ -179,25 +179,25 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>6 Sessions Private Training</h1>
-                            <h2>$360</h2>
-                            <p>6 weeks of 1 day/week training & individualized weekly fitness plans</p>
+                            <h1>Once a week training</h1>
+                            <h2>$220</h2>
+                            <p>4 weeks of 1 day/week training & individualized weekly fitness plans</p>
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>12 Sessions Private Training</h1>
-                            <h2>$660</h2>
-                            <p>6 weeks of 2 days/week training & individualized weekly fitness plans </p>
+                            <h1>Twice a week training</h1>
+                            <h2>$400</h2>
+                            <p>4 weeks of 2 days/week training & individualized weekly fitness plans </p>
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>18 Sessions Private Training</h1>
-                            <h2>$900</h2>
-                            <p>6 weeks of 3 days/week training & individualized weekly fitness plans</p>
+                            <h1>3 times a week training</h1>
+                            <h2>$540</h2>
+                            <p>4 weeks of 3 days/week training & individualized weekly fitness plans</p>
 
                         </div>
                     </div>
@@ -205,25 +205,25 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>6 Sessions Buddy Training</h1>
-                            <h2>$180/person</h2>
-                            <p>6 weeks of 1 day/week training with a friend</p>
+                            <h1>Once a week Buddy Training</h1>
+                            <h2>$108/person</h2>
+                            <p>4 weeks of 1 day/week training with a friend</p>
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>12 Sessions Buddy Training</h1>
-                            <h2>$324/person</h2>
-                            <p>6 weeks of 2 days/week training with a friend </p>
+                            <h1>Twice a week Buddy Training</h1>
+                            <h2>$200/person</h2>
+                            <p>4 weeks of 2 days/week training with a friend </p>
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>18 Sessions Buddy Training</h1>
-                            <h2>$450/person</h2>
-                            <p>6 weeks of 3 days/week training with a friend</p>
+                            <h1>Three times a week Buddy Training</h1>
+                            <h2>$276/person</h2>
+                            <p>4 weeks of 3 days/week training with a friend</p>
 
                         </div>
                     </div>
