--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>Three times a week Buddy Training</h1>
+                            <h1>3 times a week Buddy Training</h1>
                             <h2>$276/person</h2>
                             <p>4 weeks of 3 days/week training with a friend</p>
 
