--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                             <h1>Once a week training</h1>
                             <h2>$220</h2>
                             <p>4 weeks of 1 day/week training & individualized weekly fitness plans</p>
+                            <p>Each session is 1 hour</p>
 
                         </div>
                     </div>
