--- a/index.html
+++ b/index.html
@@ -290,10 +290,9 @@
                         <h1>Kristen Nielsen</h1>
                         <h2>ACE Certified Personal Trainer <br> Pelvic Floor Specialist</h2>
                         <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
-                            also developed a passion for running and swimming, both of which she competed Div I in
+                            also developed a passion for running and swimming, both of which she competed Division I in
                             college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
-                            It was during this time that she learned the limitations of pelvic floor dysfunction and how
-                            it can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
+                            It was after her pregnancies that Kristen experienced first hand how pelvic floor dysfunction can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
                             she could remain active, Kristen sought out advice on the subject but found it difficult to
                             receive practical help. After becoming an ACE certified personal trainer, Kristen
                             specialized in core and pelvic floor flunction in hopes to bring others the answers to
