--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="visa-info">
                             <h1>Private Training</h1>
 
-                            <p><b>What to expect:
+                            <p><b>What to expect:</b>
                             <li>1 Hour, one-on-one sessions designed entirely around your needs and goals</li>
                             <li>A female certified trainer that understands you and knows what to do to help</li>
                             <li>Individualized workouts based on assessments that identify muscle imbalances</li>
