--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="tab-pane" id="terms">
                         <div class="visa-info">
                             <h1>Buddy Training</h1>
-                            <p>What to expect:
+                            <p><b>What to expect:</b>
                             <li>1 Hour sessions with a friend that has similar training goals</li>
                             <li>A female certified trainer that understands how to help you reach your goals</li>
                             <li>Partner-centered personalized workouts that are challengine and fun</li>
