--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
                         <div class="visa-info">
                             <h1>Private Training</h1>
 
-                            <p><b>What to expect:</b>
-                            <li>1 Hour, one-on-one sessions designed entirely around your needs and goals</li>
-                            <li>A female certified trainer that understands you and knows what to do to help</li>
-                            <li>Individualized workouts based on assessments that identify muscle imbalances</li>
-                            <li>Crowd-free training in your home or in the trainer's home gym</li>
-                            <li>Assessments and feedback to help you gauge your progress</li>
-                            <li>Weekly workout plans for the days you are not with the trainer</li>
+                            <p>
+                            <b>What to expect:
+                                <li>1 Hour, one-on-one sessions designed entirely around your needs and goals</li>
+                                <li>A female certified trainer that understands you and knows what to do to help</li>
+                                <li>Individualized workouts based on assessments that identify muscle imbalances</li>
+                                <li>Crowd-free training in your home or in the trainer's home gym</li>
+                                <li>Assessments and feedback to help you gauge your progress</li>
+                                <li>Weekly workout plans for the days you are not with the trainer</li>
                             </b>
                             </p>
 
