--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-md-7">
                     <h1>Real Training <br>Real <span>Women</span></h1>
-                    <h3><b>In-home personal training centered around protecting and restoring the pelvic floor, so you are
-                       free to achieve your fitness and weight loss goals, and live life to the fullest!</b></h3>
+                    <h3><b><white></white>In-home personal training centered around protecting and restoring the pelvic floor, so you are
+                       free to achieve your fitness and weight loss goals, and live life to the fullest!</white></b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
