--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-md-7">
                     <h1>Real Training <br>Real <span>Women</span></h1>
-                    <h3><b><white>In-home personal training centered around protecting and restoring the pelvic floor, so you are
-                       free to achieve your fitness and weight loss goals, and live life to the fullest!</white></b></h3>
+                    <h3><b>In-home personal training centered around protecting and restoring the pelvic floor, so you are
+                       free to achieve your fitness and weight loss goals, and live life to the fullest!</b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
@@ -135,12 +135,13 @@
                     <div class="tab-pane" id="terms">
                         <div class="visa-info">
                             <h1>Buddy Training</h1>
-                            <p><b>What to expect:</b>
+                            <p><b>What to expect:
                             <li>1 Hour sessions with a friend that has similar training goals</li>
                             <li>A female certified trainer that understands how to help you reach your goals</li>
                             <li>Partner-centered personalized workouts that are challengine and fun</li>
                             <li>Crowd-free training in your home or in the trainer's home gym</li>
                             <li>Assessments and feedback to help you gauge your progress</li>
+                            </b>
                             </p>
 
                         </div>
