--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                     to live with!</b> The pelvic floor is part of the body's core; the center of strength, movement and
                 balance. Therefore, <b>training the body properly starts with training the core.</b> You don't need to
                 live with dysfuntion any longer! Together we can win!</p>
+            <br>
+            <h1 class="text-center">Ready For Real Change?</h1>
+            <p>If you train with Together Won, you are training from the core out.  While wokouts will include
+            exercises to strengthen the entire core, they will also be customized to meet your fitness needs and
+            goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
+            and how it can become as healthy and efficient as possible.  If weight loss is your goal, you will
+            be given specific workouts that increase caloric burn both during and after the exercise session, along with
+            receiving guidance on healthy living to ensure lasting change. Don't settle. Together we can win!</p>
         </div>
     </div>
 </div><!--/#about-->
