--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             <h1 class="text-center">Pelvic Floor?</h1>
             <p>Do you leak when you run, jump or sneeze? Do you need to go at the worst times? Do you let your pelvic
                 floor keep you from achieving your fitness or weight loss goals, or do you manage to hide your
-                difficulty while wishing you wouldn't have to?</p>
+                difficulty while wishing you wouldn't have to?
+            </p>
             <br>
             <p>Pelvic floor dysfunction imcompasses a range of symptoms including mild incontinence to more serious
                 conditions such as severe pelvic pain and even pelvic organ prolapse. <b>Many women believe pelvic floor
@@ -95,7 +96,8 @@
                 more serious conditions as women age. In reality,<b> pelvic floor dysfunction is not something you have
                     to live with!</b> The pelvic floor is part of the body's core; the center of strength, movement and
                 balance. Therefore, <b>training the body properly starts with training the core.</b> You don't need to
-                live with dysfuntion any longer! Together we can win!</p>
+                live with dysfuntion any longer! Together we can win!
+            </p>
             <br>
             <h1 class="text-center">Ready For Real Change?</h1>
             <p>If you train with Together Won, you are training from the core out.  While wokouts will include
@@ -103,7 +105,8 @@
             goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  If weight loss is your goal, you will
             be given specific workouts that increase caloric burn both during and after the exercise session, along with
-            receiving guidance on healthy living to ensure lasting change. Don't settle. Together we can win!</p>
+            receiving guidance on healthy living to ensure lasting change. Don't settle. Together we can win!
+            </p>
         </div>
     </div>
 </div><!--/#about-->
