--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <h1 class="text-center"><strong>Pricing</strong></h1>
                     <p>Please contact TogetherWON for availability and scheduling, as well as to request a FREE
-                        CONSULTATION. Currently In-Home training is only available for residents in North Colorado
-                        Springs and Monument.</p>
+                        CONSULTATION. Training sessions are offered in the client's home or in the trainer's
+                        home gym in North Colorado Springs. Currently "In-Client-Home" training is only available
+                        for residents in Briargate, Northgate and Monument.</p>
                     <p>Each session is 1 hour</p>
                 </div>
             </div>
