--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
                 <input type="email" name="email" class="form-control" required="required" placeholder="Your Email">
             </div>
             <div class="form-group col-sm-4">
+                <input type="email" name="email" class="form-control" required="required" placeholder="Your Phone Number">
+            </div>
+            <div class="form-group col-sm-4">
                 <input type="text" name="subject" class="form-control" placeholder="Subject">
             </div>
             <div class="form-group col-sm-12">
