--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
         <div class="contact-form text-center">
             <p class="row section-title">
             <h1>Send A Message</h1>
-            <p>Submit the following form for all inquiries or to schedule a FREE consultation. <br>You may also contact
-                TogetherWON at yyy-yyy-yyyy</p>
+            <p>Submit the following form for all inquiries or to schedule a FREE consultation. 
+            </p>
         </div>
     </div>
     <form id="contact-form" name="contact-form" method="post" action="#">
@@ -344,7 +344,7 @@
                 <input type="email" name="email" class="form-control" required="required" placeholder="Your Email">
             </div>
             <div class="form-group col-sm-4">
-                <input type="email" name="email" class="form-control" required="required" placeholder="Your Phone Number">
+                <input type="email" name="email" class="form-control" required="required" placeholder="Your Phone #">
             </div>
             <div class="form-group col-sm-4">
                 <input type="text" name="subject" class="form-control" placeholder="Subject">
