--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <b>Young athlete? </b>Workouts will focus on getting you to the next level.  
             Achieve your goals! 
             <br>
-            <b><c>Together we can win!</c></b>
+            <b><center>Together we can win!</center></b>
             </p>
         </div>
     </div>
